--- a/hackon_amazon/pubspec.yaml
+++ b/hackon_amazon/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   carousel_slider: ^4.1.1
   super_tooltip: ^1.0.1
   flutter_rating_bar: ^4.0.1
+  qr_flutter: ^4.0.0
 
 dev_dependencies:
   flutter_test:
